2018-01-20  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on FreeBSD/arm64.
	* Makefile.devel (multibuild-freebsd-arm64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For FreeBSD/arm64, enable all optimizations
	except ASM.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix build failure on FreeBSD/arm64 and Solaris/SPARC64 with non-GCC
	compiler and NO_ADDRESS_SPACE_ASSUMPTIONS.
	* lispbibl.d: On FreeBSD/arm64 with clang and on Solaris/SPARC64 with
	cc, prefer GENERIC64B_HEAPCODES over GENERIC64C_HEAPCODES.
	(GENERIC64B_HEAPCODES_WORKS): Define accordingly.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Update set of working builds for Linux/s390x.
	* Makefile.devel (multibuild-linux-s390x): Don't depend on
	build-porting64-gcc-debug_gcsafety.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix crash of build-porting64-gcc-debug_gcsafety build on Linux/s390x.
	* makemake.in: When we already have -O0 in the $XCFLAGS, don't add -O1
	to a particular compilation command.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Update comments.
	* stream.d (clear_tty_input, finish_tty_output, clear_tty_output):
	Update comments after 2017-10-05 change.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	When testing, enable a couple of optimizations that are not risky.
	This avoids test failures with non-GCC compilers.
	* Makefile.devel (build-porting*-one_free_bit_heapcodes-trivialmap,
	build-porting*-kernelvoid32_heapcodes,
	build-porting*-generic64_heapcodes,
	build-porting*-typecodes-spvw_mixed_blocks-trivialmap,
	build-porting*-spvw_pure_blocks): Remove flags -DNO_FAST_FLOAT
	-DNO_FAST_DOUBLE -DNO_ALLOCA.

2018-01-20  Bruno Haible  <bruno@clisp.org>

	Fix crash with all non-GCC/clang compilers (regression from 2006-09-03).
	* lispbibl.d (Cclosure_last_const): Don't use sizeof of a struct that
	contains a variable-length array.
	* unix/PLATFORMS: Remove section about Sun cc.

2018-01-20  Bruno Haible  <bruno@clisp.org>
