@@ -1,5 +1,14 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on DragonFly/i386.
+	None of the builds actually works for me: the kernel panics too often.
+	* Makefile.devel (multibuild-dragonfly-i386): Enable all build variants
+	that should work.
+	* makemake.in (XCFLAGS): For DragonFly/i386, enable all optimizations
+	except ASM.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Enable most optimizations on FreeBSD/arm64.
 	* Makefile.devel (multibuild-freebsd-arm64): Enable all build variants
 	that work.
